<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".MainActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			tools:ignore="UselessLeaf" />

		<TextView
			android:id="@+id/empty_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/empty_text"
			android:textAlignment="center"
			android:textColor="@color/grey"
			android:textSize="20sp" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			tools:ignore="UselessLeaf" />

	</LinearLayout>

	<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
		android:id="@+id/swipeToRefresh"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/recycler_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />

	</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/button_add_stock"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignParentBottom="true"
		android:layout_margin="24dp"
		android:clickable="true"
		android:focusable="true"
		app:srcCompat="@drawable/ic_add" />

</RelativeLayout>