<resources>
	<string name="app_name">Watchlist</string>
	<string name="empty_text">Add a stock to get started.</string>
	<string name="symbolHint">AMD</string>
	<string name="edit_stock_activity_title">Edit stock</string>
	<string name="low_price_hint">20.28</string>
	<string name="high_price_hint">27.85</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="add">Add</string>
	<string name="dialog_message_enter_symbol">"Enter symbol:"</string>
	<string name="delete">Delete</string>
	<string name="dialog_question_confirm_delete_stock_begin">"Delete "</string>
	<string name="dialog_question_confirm_delete_stock_end">\?</string>
	<string name="menu_turn_auto_refresh_on">Turn auto refresh on</string>
	<string name="menu_turn_auto_refresh_off">Turn auto refresh off</string>
</resources>